--- a/JellyFish_project/pom.xml
+++ b/JellyFish_project/pom.xml
@@ -97,7 +97,7 @@
   			<configuration>
                     <!-- Suite testng xml file to consider for test execution -->
                     <suiteXmlFiles>
-                        <suiteXmlFile>login.xml</suiteXmlFile>
+                        <suiteXmlFile></suiteXmlFile>
                      </suiteXmlFiles>
             </configuration>
   		</plugin>
